fix: Dungeon Map and Compact Tab List issues with player head drawings